unpackaged/main/default/objects/BudgetAllocation/fields/Active_Grant__c.field-meta.xml
<CustomField>
    <fullName>Active_Grant__c</fullName>
    <formula>CASE(TEXT(  FundingDisbursement.FundingAward.Status  ),
&quot;Approved Pending GA&quot;, &quot;Actual&quot;,
&quot;Awarded&quot;,&quot;Actual&quot;,
&quot;Active Grant&quot;, &quot;Actual&quot;,
&quot;Grant Closed&quot;,&quot;Actual&quot;,
&quot;Grant Closed Unsatisfactorily&quot;,&quot;Actual&quot;,
&#39;Planning&#39;, &#39;Projected&#39;,
&#39;Application Invited&#39;, &#39;Projected&#39;,
&#39;Under Review&#39;, &#39;Projected&#39;,
&#39;Reopened&#39;, &#39;Projected&#39;,
&#39;Program Review&#39;, &#39;Projected&#39;,
&#39;Director Review&#39;, &#39;Projected&#39;,
&#39;Compliance&#39;, &#39;Projected&#39;,
&#39;VP Review&#39;, &#39;Projected&#39;,
&#39;PC Review&#39;, &#39;Projected&#39;,&#39;Rejected&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active Grant</label>
    <type>Text</type>
</CustomField>