unpackaged/main/default/objects/BudgetAllocation/fields/Award_Date__c.field-meta.xml
<CustomField>
    <fullName>Award_Date__c</fullName>
    <formula>FundingDisbursement.FundingAward.DecisionDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Award Date</label>
    <type>Date</type>
</CustomField>