unpackaged/main/default/objects/BudgetAllocation/fields/Lead_Parent_Program__c.field-meta.xml
<CustomField>
    <fullName>Lead_Parent_Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead Parent Program</label>
    <referenceTo>Program</referenceTo>
    <relationshipLabel>Budget Allocations</relationshipLabel>
    <relationshipName>Budget_Allocations</relationshipName>
    <type>Lookup</type>
</CustomField>