unpackaged/main/default/objects/BudgetAllocation/fields/Override_Budget__c.field-meta.xml
<CustomField>
    <fullName>Override_Budget__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Use to manually override which Budget this Budget Contribution is charged to (i.e. prevent automation from setting it based on parent grant&#39;s award date).</inlineHelpText>
    <label>Override Budget</label>
    <type>Checkbox</type>
</CustomField>