unpackaged/main/default/objects/BudgetAllocation/fields/Payment_Status_txt__c.field-meta.xml
<CustomField>
    <fullName>Payment_Status_txt__c</fullName>
    <label>Payment Status (txt)</label>
    <type>TextArea</type>
</CustomField>