unpackaged/main/default/objects/BudgetAllocation/fields/Program__c.field-meta.xml
<CustomField>
    <fullName>Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Program</label>
    <referenceTo>Program</referenceTo>
    <relationshipLabel>Budget Allocations (Program)</relationshipLabel>
    <relationshipName>Budget_Allocations1</relationshipName>
    <type>Lookup</type>
</CustomField>