unpackaged/main/default/objects/BudgetAllocation/fields/Request_Status__c.field-meta.xml
<CustomField>
    <fullName>Request_Status__c</fullName>
    <formula>TEXT( FundingDisbursement.FundingAward.Status)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Request Status</label>
    <type>Text</type>
</CustomField>