unpackaged/main/default/objects/BudgetAllocation/fields/Request_Status_txt__c.field-meta.xml
<CustomField>
    <fullName>Request_Status_txt__c</fullName>
    <inlineHelpText>Set via process invoked from request process.</inlineHelpText>
    <label>Request Status (txt)</label>
    <type>TextArea</type>
</CustomField>