unpackaged/main/default/objects/BudgetAllocation/fields/Scheduled_Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Payment_Date__c</fullName>
    <formula>FundingDisbursement.ScheduledDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Scheduled Payment Date</label>
    <type>Date</type>
</CustomField>