unpackaged/main/default/objects/BudgetAllocation/fields/StatusOppSet1__c.field-meta.xml
<CustomField>
    <fullName>StatusOppSet1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>StatusOppSet1</label>
    <type>Checkbox</type>
</CustomField>