unpackaged/main/default/objects/BudgetAllocation/fields/StatusOppSet__c.field-meta.xml
<CustomField>
    <fullName>StatusOppSet__c</fullName>
    <defaultValue>false</defaultValue>
    <label>StatusOppSet</label>
    <type>Checkbox</type>
</CustomField>